add header and edit tailwind.config.js

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body>
+    <header class="flex justify-between px-6 py-2 items-center">
+        <img src="/src/img/Frame.png" alt="">
+        <nav >
+            <ul class="flex space-x-6 hidden md:flex">
+                <li>Features</li>
+                <li>Pricing</li>
+                <li>Blog</li>
+                <li>Docs</li>
+                <li>Changelog</li>
+                <li>We're hiring</li>
+            </ul>
+        </nav>
+        <button class="border-2 rounded-xl px-3 py-1 bg-black text-white">Login</button>
+    </header>
     
 </body>
 </html>
