add main and section 1

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="output.css">
 </head>
+
 <body>
     <header class="flex justify-between px-6 py-2 items-center">
         <img src="/src/img/Frame.png" alt="">
-        <nav >
+        <nav>
             <ul class="flex space-x-6 hidden md:flex">
                 <li>Features</li>
                 <li>Pricing</li>
@@ -21,6 +23,29 @@
         </nav>
         <button class="border-2 rounded-xl px-3 py-1 bg-black text-white">Login</button>
     </header>
-    
+
+    <main>
+        <section1 class="flex lg:px-10 px-6 py-10 justify-between items-center lg:flex-row flex-col">
+            <div class="flex flex-col gap-4">
+                <h1 class="lg:text-7xl font-bold text-[30px]">Always <br>
+                    Ready to Code.</h1>
+                <p class="text-2xl text-[#12100CB2] text-justify">Spin up fresh, automated dev environments <br>
+                    for each task, in the cloud, in seconds.</p>
+                <div class="flex lg:gap-3 justify-between lg:justify-start">
+                    <button class="border-2 rounded-xl px-3 py-1 bg-orange-300 text-black">Try Now</button>
+                    <p class="text-[#12100CB2] text-sm"> Open a workspace. <br>
+                        Start from any Git context.</p>
+                </div>
+                <div class="h-8 w-[200%] lg:w-[100%]">
+                    <img class="h-full w-full" src="/src/img/Frame (3).png" alt="">
+
+                </div>
+            </div>
+            <img src="/src/img/Frame (1).png" alt="">
+        </section1>
+
+    </main>
+
 </body>
+
 </html>
