--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,13 @@
             <img src="/src/img/Frame (1).png" alt="">
         </section1>
 
+        <section2 class="text-center  lg:text-[34px] text-[20px] flex flex-col py-[40px]">
+            <p class=" font-bold">Select project,</p>
+            <p class=" text-gray-400 ">check dependencies, checkout branch, view <br>
+            readme.txt, install tools, run build, run test,</p>
+            <p class=" font-bold">start coding.</p>
+        </section2>
+
     </main>
 
 </body>
