--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,17 @@
             <p class=" font-bold">start coding.</p>
         </section2>
 
+        <section3 class="flex justify-between lg:px-[60px] my-[40px] lg:flex-row flex-col gap-4">
+            <div>
+                <h1 class="text-[40px] font-bold">Think CI/CD for dev environments</h1>
+                <p class="text-[24px] text-gray-400 lg:mb-[300px] mb-[30px]">We invented prebuilds so application code, configuration and infrastructure can all be stored as machine-executable code in your git repositories and applied to dev environments automatically and continuously.</p>
+                <div>
+                    <button class="border-2 rounded-xl px-3 py-1 bg-orange-300 text-black">More on prebuilds</button>
+                    <button class="border-2 rounded-xl px-3 py-1 bg-pink-300 text-black">Documentation</button>
+                </div>
+            </div>
+            <img src="/src/img/Frame (4).png" alt="">
+        </section3>
     </main>
 
 </body>
