--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,13 @@
             </div>
             <img src="/src/img/Frame (4).png" alt="">
         </section3>
+
+        <section4 class="flex flex-col text-center gap-6 items-center my-[40px]">
+            <h1 class="lg:text-[54px] font-bold">Remote-first. Secure by design.</h1>
+            <img src="/src/img/Rectangle.png" alt="">
+            <p class="lg:w-[50%] lg:text-[24px]">You no longer need an over-powered laptop to code, Gitpod works just as smoothly on a Chromebook or iPad. All you need is a browser. Gitpod centralizes all source code and never stores it on insecure machines and networks.</p>
+            <img src="/src/img/Frame (5).png" alt="">
+        </section4>
     </main>
 
 </body>
