--- a/src/index.html
+++ b/src/index.html
@@ -64,11 +64,50 @@
         </section3>
 
         <section4 class="flex flex-col text-center gap-6 items-center my-[40px]">
-            <h1 class="lg:text-[54px] font-bold">Remote-first. Secure by design.</h1>
+            <h1 class="lg:text-[54px] font-bold text-[24px]">Remote-first. Secure by design.</h1>
             <img src="/src/img/Rectangle.png" alt="">
             <p class="lg:w-[50%] lg:text-[24px]">You no longer need an over-powered laptop to code, Gitpod works just as smoothly on a Chromebook or iPad. All you need is a browser. Gitpod centralizes all source code and never stores it on insecure machines and networks.</p>
             <img src="/src/img/Frame (5).png" alt="">
         </section4>
+
+        <section5 class="flex flex-col text-center gap-6 items-center my-[40px] ">
+            <h1 class="lg:text-[54px] font-bold text-[24px]">Used by 400,000+ developers.</h1>
+            <div class="flex lg:flex-row justify-around gap-6 p-5 flex-col">
+                <div class="flex flex-col text-start items-start p-5 gap-3 border-2 rounded-2xl bg-gray-300">
+                    <p>GitPod is incredibly cool.</p>
+                    <p>In my opinion, this is a big step in open source software contribution. I'm excited to see where we go from here.</p>
+                    <div class="flex gap-4 items-center">
+                        <img src="/src/img/Rectangle (1).png" alt="">
+                        <div>
+                            <p>Ben Halpern</p>
+                            <p>Creator and Co-founder @forem and @ThePracticalDev</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col text-start items-start p-5 gap-3 border-2 rounded-2xl  bg-gray-300">
+                    <p>Let's say we were overwhelmed how smooth @gitpod workspaces creation & own Docker image for workspaces worked.</p>
+                    <p>Plus, installing @code extensions from the store and integrating @gitlab CI. That blew my mind entirely, and that is hard ;</p>
+                    <div class="flex gap-4 items-center">
+                        <img src="/src/img/Rectangle (2).png" alt="">
+                        <div>
+                            <p>Michael Friedrich</p>
+                            <p>Developer Evangelist @GitLab</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col text-start items-start p-5 gap-3 border-2 rounded-2xl bg-gray-300">
+                    <p>GitPod is incredibly cool.</p>
+                    <p>In my opinion, this is a big step in open source software contribution. I'm excited to see where we go from here.</p>
+                    <div class="flex gap-4 items-center">
+                        <img src="/src/img/Rectangle (1).png" alt="">
+                        <div>
+                            <p>Ben Halpern</p>
+                            <p>Creator and Co-founder @forem and @ThePracticalDev</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section5>
     </main>
 
 </body>
