--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,31 @@
                     </div>
                 </div>
             </div>
+            <img src="/src/img/Frame (7).png" alt="">
         </section5>
+
+        <section6 class="flex flex-col text-center gap-6 items-center my-[40px]">
+            <h1 class="lg:text-[54px] font-bold text-[24px]">Get started now</h1>
+            <div class="flex lg:flex-row justify-around gap-6 p-5 flex-col">
+                <div class="flex flex-col items-center gap-10 bg-gray-200 rounded-3xl p-10">
+                    <div>
+                        <h1>Connect Git repository</h1>
+                        <p>Select a Git provider to start with an existing project from <br> any Git context.</p>
+                    </div>
+                    <img src="/src/img/Frame (8).png" alt="">
+                    <p>Or prefix any GitLab, GitHub or Bitbucket URL with</p>
+                    <p class="bg-orange-300 rounded-3xl px-2">gitpod.io/#</p>
+                </div>
+                <div class="flex flex-col items-center gap-5 bg-gray-200 rounded-3xl p-10">
+                    <div>
+                        <h1>Launch an example workspace</h1>
+                        <p>Dive into one of our example workspaces</p>
+                    </div>
+                    <img src="/src/img/Frame (9).png" alt="">
+                </div>
+            </div>
+            
+        </section6>
     </main>
 
 </body>
