add footer and finish work

--- a/src/index.html
+++ b/src/index.html
@@ -133,6 +133,44 @@
             
         </section6>
     </main>
+    <footer class="max-w-[1000px] m-auto px-5">
+        <div class="flex justify-between pb-[30px] flex-col lg:flex-row">
+        <div class="flex flex-col gap-2">
+            <p class="font-bold">Gitpod</p>
+            <p>Home</p>
+            <p>Features</p>
+            <p>Pricing</p>
+            <p>Changelog</p>
+            <p>Self-Hosted</p>
+            <p>Gitpod vs GitHub</p>
+        </div>
+        <div class="flex flex-col gap-2">
+            <p class="font-bold">Developer</p>
+            <p>Getting started</p>
+            <p>Screencasts</p>
+            <p>Blog</p>
+            <p>Documentation</p>
+            <p>Report a bug</p>
+        </div>
+        <div class="flex flex-col gap-2">
+            <p class="font-bold">Company</p>
+            <p>About</p>
+            <p>Careers</p>
+            <p>Contact</p>
+            <p>Media Kit</p>
+        </div>
+        <div class="flex flex-col gap-2">
+            <p class="font-bold">Legal</p>
+            <p>Imprint</p>
+            <p>Terms of Service</p>
+            <p>Privacy Policy</p>
+        </div>
+    </div>
+    <div class="flex justify-between items-center">
+        <img src="/src/img/Frame (10).png" alt="">
+        <img src="/src/img/Frame (11).png" alt="">
+    </div>
+    </footer>
 
 </body>
 
